[gd_scene load_steps=5 format=3 uid="uid://terminal_hud"]

[ext_resource type="Script" path="res://scripts/ui/terminal_hud.gd" id="1_hud"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 36
font_color = Color(0, 1, 0.255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_combo"]
font_size = 48
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cooldown"]
font_size = 28
font_color = Color(1, 0.3, 0.3, 1)

[node name="TerminalHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="Header" type="PanelContainer" parent="."]
offset_right = 1920.0
offset_bottom = 60.0

[node name="HeaderLabel" type="Label" parent="Header"]
layout_mode = 2
offset_left = 20.0
offset_top = 15.0
offset_right = 300.0
offset_bottom = 45.0
text = "V-FILTER v1.0"
label_settings = SubResource("LabelSettings_1")

[node name="MaskLabel" type="Label" parent="Header"]
layout_mode = 2
offset_left = 760.0
offset_top = 15.0
offset_right = 1160.0
offset_bottom = 45.0
text = "MASK: /24 FILTER"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="TargetLabel" type="Label" parent="Header"]
layout_mode = 2
offset_left = 1400.0
offset_top = 15.0
offset_right = 1900.0
offset_bottom = 45.0
text = "TARGET: 192.168.1.0/24"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 2

[node name="AlertBar" type="ProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Footer" type="Control" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScoreLabel" type="Label" parent="Footer"]
layout_mode = 0
offset_left = 20.0
offset_right = 300.0
offset_bottom = 35.0
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_1")

[node name="CooldownLabel" type="Label" parent="Footer"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_right = 600.0
offset_bottom = 35.0
text = "/16 COOLDOWN: 5.0s"
label_settings = SubResource("LabelSettings_cooldown")

[node name="ComboLabel" type="Label" parent="Footer"]
visible = false
layout_mode = 0
offset_left = 860.0
offset_right = 1060.0
offset_bottom = 50.0
pivot_offset = Vector2(100, 25)
text = "COMBO x0"
label_settings = SubResource("LabelSettings_combo")
horizontal_alignment = 1
